[package]
name = "toni_os"
version = "0.1.0"
edition = "2018"


[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] # 由于程序不连接标准库，我们需要启用 spin_no_std

panic = "abort"

# QEMU支持一种名为 isa-debug-exit 的特殊设备，
# 它提供了一种从客户系统（guest system）里退出QEMU的简单方式
# iobase 和 iosize 指定了一个_I/O 端口_
[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",                                   # 隐藏qemu
]
test-timeout = 120 # (in seconds) 2min超时

test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false
# 这个标志（flag）定义了是否将test runner用于集成测试中
# 如果该标志位被设置为 false，那么默认的test runner和自定义的test runner功能都将被禁用，
# 这样一来该测试就可以像一个普通的可执行程序一样运行了。
